--- a/dev_env/register.ipynb
+++ b/dev_env/register.ipynb
@@ -59,10 +59,9 @@
     "        self.METRICS_TO_COMPARE = pipeline_cfg[\"registry\"][\"duplicate_detection\"][\"metrics_to_compare\"]\n",
     "        self.DUPLICATE_CHECK_ENABLED = pipeline_cfg[\"registry\"][\"duplicate_detection\"][\"enabled\"]\n",
     "\n",
-    "        self.EVALUATION_LOG_TABLE = pipeline_cfg[\"tables\"][\"evaluation_log\"]\n",
+    "        self.REGISTRATION_LOG_TABLE = pipeline_cfg[\"tables\"][\"registration_log\"]\n",
     "\n",
     "        # ---------------------- NEW: SLACK CONFIG ----------------------\n",
-    "        # Try shared-scope then dev-scope (same behavior as V2)\n",
     "        self.SLACK_WEBHOOK = None\n",
     "        for scope in [\"shared-scope\", \"dev-scope\"]:\n",
     "            try:\n",
@@ -84,7 +83,7 @@
     "print(\"=\" * 80)\n",
     "\n",
     "\n",
-    "# ---------------------- SLACK NOTIFIER (FROM V2) ----------------------\n",
+    "# ---------------------- SLACK NOTIFIER ----------------------\n",
     "\n",
     "class SlackNotifier:\n",
     "    def __init__(self, webhook_url: Optional[str]):\n",
@@ -170,18 +169,46 @@
     "    return False\n",
     "\n",
     "\n",
-    "# ---------------------- REGISTER MODEL ----------------------\n",
+    "# ---------------------- REGISTER MODEL (UPDATED) ----------------------\n",
     "\n",
     "def register_model(model: Dict):\n",
     "    if is_duplicate_model(model):\n",
     "        return None\n",
     "\n",
     "    new_version = mlflow.register_model(model[\"model_uri\"], config.MODEL_NAME)\n",
-    "    print(f\"🎯 Registered version: {new_version.version}\")\n",
+    "    version = new_version.version\n",
     "\n",
-    "    slack.send(f\"✅ Model registered: {config.MODEL_NAME} (v{new_version.version})\", \"success\")\n",
+    "    print(f\"🎯 Registered version: {version}\")\n",
+    "    slack.send(f\"✅ Model registered: {config.MODEL_NAME} (v{version})\", \"success\")\n",
     "\n",
-    "    return new_version.version\n",
+    "    # ------ ⭐ ADDED METADATA/TAGS SECTION ⭐ ------\n",
+    "    try:\n",
+    "        client.set_model_version_tag(config.MODEL_NAME, version, \"run_name\", model[\"run_name\"])\n",
+    "        client.set_model_version_tag(config.MODEL_NAME, version, \"primary_metric\", config.PRIMARY_METRIC)\n",
+    "        client.set_model_version_tag(config.MODEL_NAME, version, \"primary_metric_value\", str(model[\"primary_metric\"]))\n",
+    "        client.set_model_version_tag(config.MODEL_NAME, version, \"created_by\", \"Vipul Tak\")\n",
+    "        client.set_model_version_tag(config.MODEL_NAME, version, \"artifact_path\", config.ARTIFACT_PATH)\n",
+    "        client.set_model_version_tag(config.MODEL_NAME, version, \"registered_timestamp\", datetime.now().isoformat())\n",
+    "        client.set_model_version_tag(config.MODEL_NAME, version, \"params\", json.dumps(model[\"params\"]))\n",
+    "        client.set_model_version_tag(config.MODEL_NAME, version, \"metrics\", json.dumps(model[\"metrics\"]))\n",
+    "\n",
+    "        client.update_model_version(\n",
+    "            name=config.MODEL_NAME,\n",
+    "            version=version,\n",
+    "            description=(\n",
+    "                f\"📦 Model registered automatically.\\n\"\n",
+    "                f\"🔹 Run Name: {model['run_name']}\\n\"\n",
+    "                f\"🔹 Primary Metric ({config.PRIMARY_METRIC}): {model['primary_metric']}\\n\"\n",
+    "                f\"📅 Time: {datetime.now()}\"\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "        print(f\"🏷 Metadata updated for version {version}\")\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"⚠ Failed to set tags: {e}\")\n",
+    "\n",
+    "    return version\n",
     "\n",
     "\n",
     "# ---------------------- LOG DECISION ----------------------\n",
@@ -199,7 +226,7 @@
     "        \"reason\": reason\n",
     "    }])\n",
     "\n",
-    "    spark.createDataFrame(df).write.format(\"delta\").mode(\"append\").saveAsTable(config.EVALUATION_LOG_TABLE)\n",
+    "    spark.createDataFrame(df).write.format(\"delta\").mode(\"append\").saveAsTable(config.REGISTRATION_LOG_TABLE)\n",
     "    print(\"📄 Logged in evaluation table\")\n",
     "\n",
     "\n",
