--- a/uat_env/uat_staging.ipynb
+++ b/uat_env/uat_staging.ipynb
@@ -32,18 +32,23 @@
     "print(\"\\n📋 Step 1: Loading configuration from pipeline_config.yml...\")\n",
     "\n",
     "try:\n",
-    "    with open(\"pipeline_config.yml\", \"r\") as f:\n",
+    "    import os\n",
+    "    repo_path = os.getcwd()\n",
+    "    config_path = os.path.join(repo_path, \"pipeline_config.yml\")\n",
+    "\n",
+    "    with open(config_path, \"r\") as f:\n",
     "        pipeline_cfg = yaml.safe_load(f)\n",
     "    \n",
-    "    print(f\"✅ Configuration loaded successfully!\")\n",
-    "    \n",
+    "    print(f\"✅ Configuration loaded successfully from → {config_path}\")\n",
+    "\n",
     "except FileNotFoundError:\n",
-    "    print(\"❌ ERROR: pipeline_config.yml not found!\")\n",
+    "    print(f\"❌ ERROR: pipeline_config.yml not found in {repo_path}\")\n",
     "    sys.exit(1)\n",
     "except Exception as e:\n",
     "    print(f\"❌ ERROR loading configuration: {e}\")\n",
     "    traceback.print_exc()\n",
     "    sys.exit(1)\n",
+    "\n",
     "\n",
     "# =============================================================================\n",
     "# ✅ CONFIGURATION CLASS\n",
