--- a/uat_env/uat_staging.ipynb
+++ b/uat_env/uat_staging.ipynb
@@ -34,7 +34,7 @@
     "try:\n",
     "    import os\n",
     "    repo_path = os.getcwd()\n",
-    "    config_path = os.path.join(repo_path, \"pipeline_config.yml\")\n",
+    "    config_path = \"/Workspace/Repos/vipultak7171@gmail.com/ml-credit-risk/dev_env/pipeline_config.yml\"\n",
     "\n",
     "    with open(config_path, \"r\") as f:\n",
     "        pipeline_cfg = yaml.safe_load(f)\n",
