--- a/uat_env/uat_inference.ipynb
+++ b/uat_env/uat_inference.ipynb
@@ -19,13 +19,7 @@
     }
    ],
    "source": [
-    "# =============================================================================\n",
     "# 🧪 UAT MODEL INFERENCE - NEW WORKFLOW (CONFIG-DRIVEN)\n",
-    "# =============================================================================\n",
-    "# Purpose: Validate staging model performance on UAT data\n",
-    "# Compatible with: train.py → model_registration.py → uat_staging.py → THIS SCRIPT\n",
-    "# Prerequisites: Run uat_staging.py first to promote model to @Staging\n",
-    "# =============================================================================\n",
     "\n",
     "import mlflow\n",
     "from mlflow.tracking import MlflowClient\n",
@@ -62,10 +56,18 @@
     "print(\"\\n📋 Step 1: Loading configuration from pipeline_config.yml...\")\n",
     "\n",
     "try:\n",
-    "    with open(\"pipeline_config.yml\", \"r\") as f:\n",
+    "    import os\n",
+    "\n",
+    "    # 🔥 Absolute path to config (your working folder)\n",
+    "    config_path = \"/Workspace/Repos/vipultak7171@gmail.com/ml-credit-risk/dev_env/pipeline_config.yml\"\n",
+    "\n",
+    "    if not os.path.exists(config_path):\n",
+    "        raise FileNotFoundError(f\"Config not found at: {config_path}\")\n",
+    "\n",
+    "    with open(config_path, \"r\") as f:\n",
     "        pipeline_cfg = yaml.safe_load(f)\n",
-    "    \n",
-    "    print(f\"✅ Configuration loaded successfully!\")\n",
+    "\n",
+    "    print(f\"✅ Configuration loaded successfully from → {config_path}\")\n",
     "    \n",
     "except FileNotFoundError:\n",
     "    print(\"❌ ERROR: pipeline_config.yml not found!\")\n",
