--- a/prod_env/prod_promotion.ipynb
+++ b/prod_env/prod_promotion.ipynb
@@ -28,10 +28,20 @@
     "print(\"\\n📋 Step 1: Loading configuration from pipeline_config.yml...\")\n",
     "\n",
     "try:\n",
-    "    with open(\"pipeline_config.yml\", \"r\") as f:\n",
-    "        pipeline_cfg = yaml.safe_load(f)\n",
+    "    import os\n",
+    "\n",
+    "    # Try absolute repo path first\n",
+    "    config_path = \"/Workspace/Repos/vipultak7171@gmail.com/ml-credit-risk/dev_env/pipeline_config.yml\"\n",
+    "\n",
+    "    if not os.path.exists(config_path):\n",
+    "        # Fallback for running inside Databricks Jobs/Workspace\n",
+    "        config_path = \"/Workspace/ml-credit-risk/dev_env/pipeline_config.yml\"\n",
     "    \n",
-    "    print(f\"✅ Configuration loaded successfully!\")\n",
+    "    with open(config_path, \"r\") as f:\n",
+    "        pipeline_cfg = yaml.safe_load(f)\n",
+    "\n",
+    "    print(f\"✅ Configuration loaded from: {config_path}\")\n",
+    "\n",
     "    \n",
     "except FileNotFoundError:\n",
     "    print(\"❌ ERROR: pipeline_config.yml not found!\")\n",
