--- a/uat_env/uat_inference.ipynb
+++ b/uat_env/uat_inference.ipynb
@@ -553,6 +553,8 @@
     " \n",
     "# 📋 STEP 6: LOG RESULTS\n",
     "\n",
+    "# 📋 STEP 6: LOG RESULTS\n",
+    "\n",
     "def log_results(\n",
     "    model_version: int,\n",
     "    run_id: str,\n",
@@ -575,7 +577,7 @@
     "        except Exception:\n",
     "            print(f\"   Table exists: No (will be created)\")\n",
     "        \n",
-    "        # Prepare result data\n",
+    "        # 🚀 Simplified, meaningful columns only\n",
     "        result_data = {\n",
     "            \"timestamp\": datetime.now(),\n",
     "            \"model_name\": config.MODEL_NAME,\n",
@@ -583,37 +585,28 @@
     "            \"model_version\": str(model_version),\n",
     "            \"run_id\": run_id,\n",
     "            \"uat_status\": status,\n",
-    "            \n",
-    "            # Individual metrics\n",
+    "\n",
+    "            # Key metrics only\n",
     "            \"accuracy\": float(metrics.get('accuracy', 0)),\n",
     "            \"precision\": float(metrics.get('precision', 0)),\n",
     "            \"recall\": float(metrics.get('recall', 0)),\n",
     "            \"f1\": float(metrics.get('f1', 0)),\n",
     "            \"roc_auc\": float(metrics.get('roc_auc', 0)) if metrics.get('roc_auc') else None,\n",
-    "            \n",
-    "            # Metadata\n",
-    "            \"all_metrics_json\": json.dumps({k: float(v) if v is not None else None \n",
-    "                                           for k, v in metrics.items() \n",
-    "                                           if k != 'confusion_matrix'}),\n",
-    "            \"thresholds_json\": json.dumps(config.UAT_THRESHOLDS),\n",
-    "            \"failed_checks_json\": json.dumps(failed_checks) if failed_checks else None,\n",
-    "            \"num_failed_checks\": len(failed_checks),\n",
-    "            \n",
-    "            # Confusion matrix\n",
-    "            \"confusion_matrix_json\": json.dumps(metrics.get('confusion_matrix', []))\n",
+    "\n",
+    "            # Store confusion matrix & failures only if needed\n",
+    "            \"confusion_matrix_json\": json.dumps(metrics.get('confusion_matrix', [])),\n",
+    "            \"failed_checks_json\": json.dumps(failed_checks) if failed_checks else None\n",
     "        }\n",
     "        \n",
     "        result_df = pd.DataFrame([result_data])\n",
     "        spark_df = spark.createDataFrame(result_df)\n",
-    "        \n",
-    "        # Write to Delta table\n",
-    "        if table_exists:\n",
-    "            spark_df.write.mode(\"append\").option(\"mergeSchema\", \"true\").saveAsTable(\n",
-    "                config.UAT_RESULTS_TABLE\n",
-    "            )\n",
-    "        else:\n",
-    "            spark_df.write.mode(\"append\").saveAsTable(config.UAT_RESULTS_TABLE)\n",
-    "        \n",
+    "\n",
+    "        # 🛠 FIX: Enable MERGE SCHEMA to prevent errors\n",
+    "        spark_df.write.format(\"delta\") \\\n",
+    "            .mode(\"append\") \\\n",
+    "            .option(\"mergeSchema\", \"true\") \\\n",
+    "            .saveAsTable(config.UAT_RESULTS_TABLE)\n",
+    "\n",
     "        print(f\"\\n✅ Results logged successfully\")\n",
     "        print(f\"   Output Table: {config.UAT_RESULTS_TABLE}\")\n",
     "        print(f\"   Model: {config.MODEL_NAME}\")\n",
@@ -623,6 +616,7 @@
     "    except Exception as e:\n",
     "        print(f\"\\n⚠️  Failed to log results: {e}\")\n",
     "        traceback.print_exc()\n",
+    "\n",
     " \n",
     "# 🎬 MAIN EXECUTION\n",
     "\n",
