--- a/uat_env/uat_inference.ipynb
+++ b/uat_env/uat_inference.ipynb
@@ -554,7 +554,6 @@
     "# 📋 STEP 6: LOG RESULTS\n",
     "\n",
     "# 📋 STEP 6: LOG RESULTS\n",
-    "\n",
     "def log_results(\n",
     "    model_version: int,\n",
     "    run_id: str,\n",
@@ -563,21 +562,15 @@
     "    failed_checks: list\n",
     ") -> None:\n",
     "    \"\"\"Log UAT results to Delta table\"\"\"\n",
+    "\n",
     "    print(f\"\\n{'='*70}\")\n",
     "    print(\"📋 STEP 6: Logging Results\")\n",
     "    print(f\"{'='*70}\")\n",
-    "    \n",
+    "\n",
     "    try:\n",
-    "        # Check if table exists\n",
-    "        table_exists = False\n",
-    "        try:\n",
-    "            spark.table(config.UAT_RESULTS_TABLE)\n",
-    "            table_exists = True\n",
-    "            print(f\"   Table exists: Yes\")\n",
-    "        except Exception:\n",
-    "            print(f\"   Table exists: No (will be created)\")\n",
-    "        \n",
-    "        # 🚀 Simplified, meaningful columns only\n",
+    "        from delta.tables import DeltaTable\n",
+    "\n",
+    "        # Final storage structure\n",
     "        result_data = {\n",
     "            \"timestamp\": datetime.now(),\n",
     "            \"model_name\": config.MODEL_NAME,\n",
@@ -586,35 +579,45 @@
     "            \"run_id\": run_id,\n",
     "            \"uat_status\": status,\n",
     "\n",
-    "            # Key metrics only\n",
     "            \"accuracy\": float(metrics.get('accuracy', 0)),\n",
     "            \"precision\": float(metrics.get('precision', 0)),\n",
     "            \"recall\": float(metrics.get('recall', 0)),\n",
     "            \"f1\": float(metrics.get('f1', 0)),\n",
     "            \"roc_auc\": float(metrics.get('roc_auc', 0)) if metrics.get('roc_auc') else None,\n",
     "\n",
-    "            # Store confusion matrix & failures only if needed\n",
     "            \"confusion_matrix_json\": json.dumps(metrics.get('confusion_matrix', [])),\n",
     "            \"failed_checks_json\": json.dumps(failed_checks) if failed_checks else None\n",
     "        }\n",
-    "        \n",
+    "\n",
     "        result_df = pd.DataFrame([result_data])\n",
     "        spark_df = spark.createDataFrame(result_df)\n",
     "\n",
-    "        # 🛠 FIX: Enable MERGE SCHEMA to prevent errors\n",
-    "        spark_df.write.format(\"delta\") \\\n",
-    "            .mode(\"append\") \\\n",
-    "            .option(\"mergeSchema\", \"true\") \\\n",
-    "            .saveAsTable(config.UAT_RESULTS_TABLE)\n",
+    "        # ---- FIX: Auto Schema + Create Table If Missing ----\n",
+    "        try:\n",
+    "            # Check if table exists\n",
+    "            DeltaTable.forName(spark, config.UAT_RESULTS_TABLE)\n",
     "\n",
-    "        print(f\"\\n✅ Results logged successfully\")\n",
-    "        print(f\"   Output Table: {config.UAT_RESULTS_TABLE}\")\n",
-    "        print(f\"   Model: {config.MODEL_NAME}\")\n",
-    "        print(f\"   Version: v{model_version}\")\n",
-    "        print(f\"   Status: {status}\")\n",
-    "        \n",
+    "            spark_df.write.format(\"delta\") \\\n",
+    "                .mode(\"append\") \\\n",
+    "                .option(\"mergeSchema\", \"true\") \\\n",
+    "                .saveAsTable(config.UAT_RESULTS_TABLE)\n",
+    "\n",
+    "            print(\"📌 Table exists → appended successfully.\")\n",
+    "\n",
+    "        except Exception:\n",
+    "            # Create new table if it doesn't exist\n",
+    "            spark_df.write.format(\"delta\") \\\n",
+    "                .mode(\"overwrite\") \\\n",
+    "                .option(\"overwriteSchema\", \"true\") \\\n",
+    "                .saveAsTable(config.UAT_RESULTS_TABLE)\n",
+    "\n",
+    "            print(\"🆕 Table did NOT exist → created new.\")\n",
+    "\n",
+    "        print(f\"\\n✅ Results logged successfully!\")\n",
+    "        print(f\"📍 Table: {config.UAT_RESULTS_TABLE}\")\n",
+    "\n",
     "    except Exception as e:\n",
-    "        print(f\"\\n⚠️  Failed to log results: {e}\")\n",
+    "        print(f\"\\n⚠️ Failed to log UAT results: {e}\")\n",
     "        traceback.print_exc()\n",
     "\n",
     " \n",
