--- a/uat_env/uat_inference.ipynb
+++ b/uat_env/uat_inference.ipynb
@@ -25,7 +25,6 @@
     "from mlflow.tracking import MlflowClient\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import math\n",
     "from sklearn.metrics import (\n",
     "    accuracy_score, \n",
     "    precision_score, \n",
@@ -35,7 +34,6 @@
     "    confusion_matrix\n",
     ")\n",
     "from pyspark.sql import SparkSession\n",
-    "from pyspark.ml.linalg import VectorUDT, Vectors\n",
     "from datetime import datetime\n",
     "import warnings\n",
     "import sys\n",
@@ -43,13 +41,13 @@
     "import yaml\n",
     "import json\n",
     "import requests\n",
-    "from typing import Dict, Optional, Tuple\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "print(\"=\" * 80)\n",
     "print(\"🧪 UAT MODEL INFERENCE (NEW WORKFLOW)\")\n",
     "print(\"=\" * 80)\n",
+    "\n",
     "\n",
     "# -----------------------------------------------------------------------------------\n",
     "# LOAD CONFIG\n",
@@ -121,7 +119,7 @@
     "\n",
     "\n",
     "# -----------------------------------------------------------------------------------\n",
-    "# SLACK NOTIFICATION (FROM V1) — ADDED\n",
+    "# SLACK NOTIFICATION\n",
     "# -----------------------------------------------------------------------------------\n",
     "\n",
     "def get_slack_webhook():\n",
@@ -147,10 +145,9 @@
     "    payload = {\"text\": f\"{emoji} {message}\"}\n",
     "\n",
     "    try:\n",
-    "        r = requests.post(SLACK_WEBHOOK_URL, json=payload, timeout=5)\n",
-    "        print(\"📨 Slack Notification Sent\" if r.status_code == 200 else f\"⚠ Slack Error: {r.status_code}\")\n",
-    "    except Exception as e:\n",
-    "        print(f\"⚠ Slack send failed: {e}\")\n",
+    "        requests.post(SLACK_WEBHOOK_URL, json=payload, timeout=5)\n",
+    "    except:\n",
+    "        pass\n",
     "\n",
     "\n",
     "# -----------------------------------------------------------------------------------\n",
@@ -173,12 +170,14 @@
     "    sys.exit(1)\n",
     "\n",
     "\n",
+    "\n",
     "# -----------------------------------------------------------------------------------\n",
-    "# HELPER FUNCTIONS\n",
+    "# HELPERS\n",
     "# -----------------------------------------------------------------------------------\n",
     "\n",
     "def vector_to_array(v):\n",
     "    return v.toArray() if hasattr(v, 'toArray') else np.array(v)\n",
+    "\n",
     "\n",
     "\n",
     "# -----------------------------------------------------------------------------------\n",
@@ -199,6 +198,7 @@
     "    return model, int(model_version.version), model_version.run_id\n",
     "\n",
     "\n",
+    "\n",
     "# -----------------------------------------------------------------------------------\n",
     "# STEP 2: LOAD UAT DATA\n",
     "# -----------------------------------------------------------------------------------\n",
@@ -215,6 +215,7 @@
     "    return df, X, y_true\n",
     "\n",
     "\n",
+    "\n",
     "# -----------------------------------------------------------------------------------\n",
     "# STEP 3: RUN INFERENCE\n",
     "# -----------------------------------------------------------------------------------\n",
@@ -228,6 +229,7 @@
     "        y_pred_proba = y_pred.astype(float)\n",
     "\n",
     "    return y_pred, y_pred_proba\n",
+    "\n",
     "\n",
     "\n",
     "# -----------------------------------------------------------------------------------\n",
@@ -250,6 +252,7 @@
     "    metrics[\"confusion_matrix\"] = confusion_matrix(y_true, y_pred).tolist()\n",
     "\n",
     "    return metrics\n",
+    "\n",
     "\n",
     "\n",
     "# -----------------------------------------------------------------------------------\n",
@@ -275,8 +278,9 @@
     "    return status, failed\n",
     "\n",
     "\n",
+    "\n",
     "# -----------------------------------------------------------------------------------\n",
-    "# STEP 6: STORE RESULTS\n",
+    "# STEP 6: STORE RESULTS (UPDATED WITH DELETE CLEANUP)\n",
     "# -----------------------------------------------------------------------------------\n",
     "\n",
     "def log_results(version, run_id, metrics, status, failed_checks):\n",
@@ -284,6 +288,16 @@
     "    print(\"\\n📍 Logging UAT Results into Delta Table...\")\n",
     "\n",
     "    from delta.tables import DeltaTable\n",
+    "\n",
+    "    # 🔥 Added cleanup step (remove older duplicate records)\n",
+    "    try:\n",
+    "        spark.sql(f\"\"\"\n",
+    "        DELETE FROM {config.UAT_RESULTS_TABLE}\n",
+    "        WHERE model_version = '{version}'\n",
+    "        \"\"\")\n",
+    "        print(f\"🧹 Deleted duplicate entries for version {version}\")\n",
+    "    except:\n",
+    "        print(\"ℹ No cleanup needed.\")\n",
     "\n",
     "    result = {\n",
     "        \"timestamp\": datetime.now(),\n",
@@ -310,6 +324,7 @@
     "        df.write.mode(\"overwrite\").option(\"overwriteSchema\", \"true\").saveAsTable(config.UAT_RESULTS_TABLE)\n",
     "\n",
     "    print(\"📌 Results logged.\")\n",
+    "\n",
     "\n",
     "\n",
     "# -----------------------------------------------------------------------------------\n",
