--- a/prod_env/prod_promotion.ipynb
+++ b/prod_env/prod_promotion.ipynb
@@ -48,6 +48,8 @@
     "    traceback.print_exc()\n",
     "    sys.exit(1)\n",
     "\n",
+    "\n",
+    "\n",
     "# ================== CONFIG ==================\n",
     "\n",
     "class Config:\n",
@@ -92,9 +94,12 @@
     "        except:\n",
     "            return None\n",
     "\n",
+    "\n",
     "config = Config()\n",
     "\n",
     "print(\"=\" * 80)\n",
+    "\n",
+    "\n",
     "\n",
     "# ================== SLACK HANDLER ==================\n",
     "\n",
@@ -105,37 +110,63 @@
     "        self.enabled = bool(webhook_url)\n",
     "\n",
     "    def send(self, message, level=\"info\", extra=None):\n",
+    "        \"\"\"Safe Slack sender — never breaks pipeline.\"\"\"\n",
+    "        \n",
     "        if not self.enabled:\n",
     "            print(f\"📢 (Slack Disabled) {message}\")\n",
     "            return False\n",
     "\n",
     "        emoji = {\n",
-    "            \"info\": \"ℹ️\", \"success\": \"✅\",\n",
-    "            \"warning\": \"⚠️\", \"error\": \"❌\",\n",
+    "            \"info\": \"ℹ️\",\n",
+    "            \"success\": \"✅\",\n",
+    "            \"warning\": \"⚠️\",\n",
+    "            \"error\": \"❌\",\n",
     "            \"rocket\": \"🚀\"\n",
     "        }.get(level, \"ℹ️\")\n",
     "\n",
-    "        text = f\"{emoji} *{message}*\"\n",
+    "        formatted_message = f\"{emoji} *{message}*\"\n",
     "\n",
     "        if extra:\n",
+    "            formatted_message += \"\\n\"\n",
     "            for k, v in extra.items():\n",
-    "                text += f\"\\n• *{k}:* {v}\"\n",
+    "                formatted_message += f\"\\n• *{k}:* {v}\"\n",
     "\n",
     "        try:\n",
-    "            r = requests.post(self.webhook_url, json={\"text\": text}, timeout=5)\n",
-    "            print(\"📨 Slack sent!\" if r.status_code == 200 else f\"⚠ Slack Error {r.status_code}\")\n",
+    "            response = requests.post(self.webhook_url, json={\"text\": formatted_message}, timeout=5)\n",
+    "\n",
+    "            if response.status_code == 200:\n",
+    "                print(\"📨 Slack message sent successfully\")\n",
+    "                return True\n",
+    "            \n",
+    "            print(f\"⚠ Slack HTTP Error → {response.status_code}\")\n",
+    "            return False\n",
+    "\n",
     "        except Exception as e:\n",
-    "            print(f\"⚠ Slack failed (ignored): {e}\")\n",
+    "            print(f\"⚠ Slack send failed but safely ignored → {e}\")\n",
+    "            return False\n",
     "\n",
-    "    def success(self, model, version, metrics):\n",
-    "        details = {k: f\"{v:.4f}\" if isinstance(v, float) else v for k,v in metrics.items()}\n",
-    "        self.send(\"Production Deployment Successful 🚀\", \"success\",\n",
-    "                  {\"Model\": model, \"Version\": f\"v{version}\", **details})\n",
     "\n",
-    "    def blocked(self, reason):\n",
-    "        self.send(\"🚫 Promotion Blocked\", \"warning\", {\"Reason\": reason})\n",
+    "    def success(self, model_name: str, version: int, metrics: Dict):\n",
+    "        details = {\n",
+    "            \"Model\": model_name,\n",
+    "            \"Version\": f\"v{version}\",\n",
+    "            \"Status\": \"🟢 LIVE in Production\"\n",
+    "        }\n",
+    "\n",
+    "        for metric_name, value in metrics.items():\n",
+    "            if value is not None:\n",
+    "                details[metric_name] = f\"{value:.4f}\" if isinstance(value, float) else str(value)\n",
+    "\n",
+    "        self.send(\"🚀 Production Deployment Successful\", level=\"rocket\", extra=details)\n",
+    "\n",
+    "\n",
+    "    def blocked(self, reason: str):\n",
+    "        self.send(\"🚫 Production Promotion Blocked\", level=\"warning\", extra={\"Reason\": reason})\n",
+    "\n",
     "\n",
     "slack = SlackNotifier(config.SLACK_WEBHOOK_URL)\n",
+    "\n",
+    "\n",
     "\n",
     "# ================== MLFLOW INIT ==================\n",
     "\n",
@@ -151,6 +182,8 @@
     "    print(f\"❌ Pipeline Init Failed: {e}\")\n",
     "    sys.exit(1)\n",
     "\n",
+    "\n",
+    "\n",
     "# ================== HELPER FUNCTIONS ==================\n",
     "\n",
     "def get_metric(run_id):\n",
@@ -158,6 +191,8 @@
     "        return client.get_run(run_id).data.metrics.get(config.PRIMARY_METRIC)\n",
     "    except:\n",
     "        return None\n",
+    "\n",
+    "\n",
     "\n",
     "# ================== STAGING MODEL ==================\n",
     "\n",
@@ -168,6 +203,8 @@
     "        return {\"version\": int(mv.version), \"run\": mv.run_id, \"metric\": get_metric(mv.run_id)}\n",
     "    except:\n",
     "        return None\n",
+    "\n",
+    "\n",
     "\n",
     "# ================== UAT VALIDATION ==================\n",
     "\n",
@@ -188,6 +225,8 @@
     "        \"roc_auc\": latest[\"roc_auc\"]\n",
     "    }\n",
     "\n",
+    "\n",
+    "\n",
     "# ================== PROMOTE ==================\n",
     "\n",
     "def promote(model, uat):\n",
@@ -199,6 +238,8 @@
     "\n",
     "    print(\"\\n🎉 MODEL LIVE IN PRODUCTION!\")\n",
     "    slack.success(config.MODEL_NAME, v, uat)\n",
+    "\n",
+    "\n",
     "\n",
     "# ================== MAIN ==================\n",
     "\n",
@@ -218,6 +259,7 @@
     "    promote(model, uat)\n",
     "\n",
     "    print(\"\\n✨ Workflow Complete!\")\n",
+    "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
