--- a/prod_env/prod_create_serving.ipynb
+++ b/prod_env/prod_create_serving.ipynb
@@ -33,11 +33,18 @@
     "print(\"\\n📋 Step 1: Loading configuration from pipeline_config.yml...\")\n",
     "\n",
     "try:\n",
-    "    with open(\"pipeline_config.yml\", \"r\") as f:\n",
+    "    import os\n",
+    "\n",
+    "    config_path = \"/Workspace/Repos/vipultak7171@gmail.com/ml-credit-risk/dev_env/pipeline_config.yml\"\n",
+    "\n",
+    "    if not os.path.exists(config_path):\n",
+    "        config_path = \"/Workspace/ml-credit-risk/dev_env/pipeline_config.yml\"\n",
+    "\n",
+    "    with open(config_path, \"r\") as f:\n",
     "        pipeline_cfg = yaml.safe_load(f)\n",
-    "    \n",
-    "    print(f\"✅ Configuration loaded successfully!\")\n",
-    "    \n",
+    "\n",
+    "    print(f\"✅ Configuration loaded successfully from: {config_path}\")\n",
+    "\n",
     "except FileNotFoundError:\n",
     "    print(\"❌ ERROR: pipeline_config.yml not found!\")\n",
     "    print(\"💡 Please ensure pipeline_config.yml is in the notebook directory\")\n",
@@ -53,7 +60,6 @@
     "    \"\"\"Configuration manager - reads from pipeline_config.yml\"\"\"\n",
     "    \n",
     "    def __init__(self):\n",
-    "        # Model configuration\n",
     "        MODEL_TYPE = pipeline_cfg[\"model\"][\"type\"]\n",
     "        UC_CATALOG = pipeline_cfg[\"model\"][\"catalog\"]\n",
     "        UC_SCHEMA = pipeline_cfg[\"model\"][\"schema\"]\n",
@@ -62,29 +68,23 @@
     "        self.MODEL_NAME = f\"{UC_CATALOG}.{UC_SCHEMA}.{BASE_NAME}_{MODEL_TYPE}\"\n",
     "        self.MODEL_TYPE = MODEL_TYPE\n",
     "        \n",
-    "        # Generate endpoint name (Databricks-friendly format)\n",
     "        self.ENDPOINT_NAME = f\"{BASE_NAME.replace('_', '-')}-{MODEL_TYPE}-prod\"\n",
     "        \n",
-    "        # Aliases\n",
     "        self.PRODUCTION_ALIAS = pipeline_cfg[\"aliases\"][\"production\"]\n",
     "        self.STAGING_ALIAS = pipeline_cfg[\"aliases\"][\"staging\"]\n",
     "        \n",
-    "        # Serving configuration (with safe defaults)\n",
     "        serving_cfg = pipeline_cfg.get(\"serving\", {})\n",
     "        self.WORKLOAD_SIZE = serving_cfg.get(\"workload_size\", \"Small\")\n",
     "        self.SCALE_TO_ZERO = serving_cfg.get(\"scale_to_zero_enabled\", True)\n",
     "        self.MIN_PROVISIONED_THROUGHPUT = serving_cfg.get(\"min_provisioned_throughput\", 0)\n",
     "        self.MAX_PROVISIONED_THROUGHPUT = serving_cfg.get(\"max_provisioned_throughput\", 0)\n",
     "        \n",
-    "        # Advanced serving settings\n",
-    "        self.WORKLOAD_TYPE = serving_cfg.get(\"workload_type\", \"CPU\")  # CPU or GPU\n",
+    "        self.WORKLOAD_TYPE = serving_cfg.get(\"workload_type\", \"CPU\")\n",
     "        self.ENVIRONMENT_VARS = serving_cfg.get(\"environment_vars\", {})\n",
     "        \n",
-    "        # Timeout settings\n",
-    "        self.DEPLOYMENT_TIMEOUT = serving_cfg.get(\"deployment_timeout\", 1800)  # 30 minutes\n",
-    "        self.STATUS_CHECK_INTERVAL = serving_cfg.get(\"status_check_interval\", 15)  # 15 seconds\n",
+    "        self.DEPLOYMENT_TIMEOUT = serving_cfg.get(\"deployment_timeout\", 1800)\n",
+    "        self.STATUS_CHECK_INTERVAL = serving_cfg.get(\"status_check_interval\", 15)\n",
     "        \n",
-    "        # Slack notifications\n",
     "        self.SLACK_ENABLED = pipeline_cfg[\"notifications\"][\"enabled\"]\n",
     "        self.SLACK_WEBHOOK_URL = self._get_slack_webhook()\n",
     "        \n",
@@ -100,7 +100,6 @@
     "        print(f\"   Slack: {'ENABLED' if self.SLACK_WEBHOOK_URL else 'DISABLED'}\")\n",
     "    \n",
     "    def _get_slack_webhook(self) -> Optional[str]:\n",
-    "        \"\"\"Safely retrieve Slack webhook URL from Databricks secrets\"\"\"\n",
     "        if not self.SLACK_ENABLED:\n",
     "            return None\n",
     "        \n",
@@ -122,11 +121,10 @@
     "            print(f\"   ⚠️  Could not access secrets: {e}\")\n",
     "            return None\n",
     "\n",
-    "# Initialize config\n",
     "config = Config()\n",
     "\n",
     "print(\"=\" * 80)\n",
-    " \n",
+    "\n",
     "# 📢 SLACK NOTIFICATION HELPER\n",
     "\n",
     "class SlackNotifier:\n",
