--- a/prod_env/prod_create_serving.ipynb
+++ b/prod_env/prod_create_serving.ipynb
@@ -21,7 +21,7 @@
     "import yaml\n",
     "import traceback\n",
     "import requests\n",
-    "from typing import Optional, Dict\n",
+    "from typing import Optional, Dict, Tuple\n",
     "from datetime import datetime\n",
     "\n",
     "print(\"=\" * 80)\n",
