--- a/prod_env/prod_promotion.ipynb
+++ b/prod_env/prod_promotion.ipynb
@@ -23,7 +23,7 @@
     "print(\"🚀 PRODUCTION PROMOTION (NEW WORKFLOW)\")\n",
     "print(\"=\" * 80)\n",
     "\n",
-    "# ✅ LOAD PIPELINE CONFIGURATION\n",
+    "# LOAD PIPELINE CONFIGURATION\n",
     "\n",
     "print(\"\\n📋 Step 1: Loading configuration from pipeline_config.yml...\")\n",
     "\n",
@@ -48,9 +48,7 @@
     "    traceback.print_exc()\n",
     "    sys.exit(1)\n",
     "\n",
-    "\n",
-    "\n",
-    "# ================== CONFIG ==================\n",
+    "# CONFIG CLASS\n",
     "\n",
     "class Config:\n",
     "    def __init__(self):\n",
@@ -76,99 +74,56 @@
     "        \n",
     "        self.TOLERANCE = 1e-6\n",
     "\n",
-    "        print(f\"\\n📊 Config Loaded → Model: {self.MODEL_NAME}, Slack: {self.SLACK_WEBHOOK_URL is not None}\")\n",
+    "        print(f\"\\n📊 Config Loaded → Model: {self.MODEL_NAME}, Slack Enabled: {self.SLACK_WEBHOOK_URL is not None}\")\n",
     "\n",
     "    def _get_slack_webhook(self) -> Optional[str]:\n",
-    "        if not self.SLACK_ENABLED:\n",
-    "            return None\n",
-    "        try:\n",
-    "            scopes = [\"shared-scope\", \"dev-scope\", \"prod-scope\"]\n",
-    "            for scope in scopes:\n",
-    "                try:\n",
-    "                    webhook = dbutils.secrets.get(scope, \"SLACK_WEBHOOK_URL\")\n",
-    "                    if webhook.strip():\n",
-    "                        return webhook\n",
-    "                except:\n",
-    "                    pass\n",
-    "            return None\n",
-    "        except:\n",
-    "            return None\n",
+    "        \"\"\"Slack Webhook Logic copied from v1 (working version)\"\"\"\n",
+    "        from pyspark.dbutils import DBUtils\n",
+    "        dbutils = DBUtils(spark)\n",
+    "\n",
+    "        for scope in [\"shared-scope\", \"dev-scope\"]:\n",
+    "            try:\n",
+    "                webhook = dbutils.secrets.get(scope, \"SLACK_WEBHOOK_URL\")\n",
+    "                if webhook.strip():\n",
+    "                    print(f\"✓ Slack webhook loaded from: {scope}\")\n",
+    "                    return webhook\n",
+    "            except:\n",
+    "                pass\n",
+    "        print(\"⚠️ No Slack Webhook found\")\n",
+    "        return None\n",
     "\n",
     "\n",
     "config = Config()\n",
     "\n",
     "print(\"=\" * 80)\n",
     "\n",
+    "# SLACK NOTIFICATION (FROM v1 - WORKING BLOCK)\n",
     "\n",
+    "def send_slack_notification(message, level=\"info\"):\n",
+    "    \"\"\"Send Slack message using v1 logic\"\"\"\n",
     "\n",
-    "# ================== SLACK HANDLER ==================\n",
+    "    if not config.SLACK_WEBHOOK_URL:\n",
+    "        print(f\"⚠️ Slack is NOT configured. Message: {message}\")\n",
+    "        return\n",
     "\n",
-    "class SlackNotifier:\n",
+    "    emoji_map = {\"info\": \"ℹ️\", \"success\": \"✅\", \"warning\": \"⚠️\", \"error\": \"❌\"}\n",
     "\n",
-    "    def __init__(self, webhook_url):\n",
-    "        self.webhook_url = webhook_url\n",
-    "        self.enabled = bool(webhook_url)\n",
+    "    formatted_message = f\"{emoji_map.get(level, 'ℹ️')} {message}\"\n",
     "\n",
-    "    def send(self, message, level=\"info\", extra=None):\n",
-    "        \"\"\"Safe Slack sender — never breaks pipeline.\"\"\"\n",
-    "        \n",
-    "        if not self.enabled:\n",
-    "            print(f\"📢 (Slack Disabled) {message}\")\n",
-    "            return False\n",
+    "    try:\n",
+    "        response = requests.post(\n",
+    "            config.SLACK_WEBHOOK_URL,\n",
+    "            json={\"text\": formatted_message},\n",
+    "            timeout=5\n",
+    "        )\n",
+    "        if response.status_code == 200:\n",
+    "            print(\"📨 Slack notification sent!\")\n",
+    "        else:\n",
+    "            print(f\"⚠ Slack response status: {response.status_code}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"⚠ Slack send error: {e}\")\n",
     "\n",
-    "        emoji = {\n",
-    "            \"info\": \"ℹ️\",\n",
-    "            \"success\": \"✅\",\n",
-    "            \"warning\": \"⚠️\",\n",
-    "            \"error\": \"❌\",\n",
-    "            \"rocket\": \"🚀\"\n",
-    "        }.get(level, \"ℹ️\")\n",
-    "\n",
-    "        formatted_message = f\"{emoji} *{message}*\"\n",
-    "\n",
-    "        if extra:\n",
-    "            formatted_message += \"\\n\"\n",
-    "            for k, v in extra.items():\n",
-    "                formatted_message += f\"\\n• *{k}:* {v}\"\n",
-    "\n",
-    "        try:\n",
-    "            response = requests.post(self.webhook_url, json={\"text\": formatted_message}, timeout=5)\n",
-    "\n",
-    "            if response.status_code == 200:\n",
-    "                print(\"📨 Slack message sent successfully\")\n",
-    "                return True\n",
-    "            \n",
-    "            print(f\"⚠ Slack HTTP Error → {response.status_code}\")\n",
-    "            return False\n",
-    "\n",
-    "        except Exception as e:\n",
-    "            print(f\"⚠ Slack send failed but safely ignored → {e}\")\n",
-    "            return False\n",
-    "\n",
-    "\n",
-    "    def success(self, model_name: str, version: int, metrics: Dict):\n",
-    "        details = {\n",
-    "            \"Model\": model_name,\n",
-    "            \"Version\": f\"v{version}\",\n",
-    "            \"Status\": \"🟢 LIVE in Production\"\n",
-    "        }\n",
-    "\n",
-    "        for metric_name, value in metrics.items():\n",
-    "            if value is not None:\n",
-    "                details[metric_name] = f\"{value:.4f}\" if isinstance(value, float) else str(value)\n",
-    "\n",
-    "        self.send(\"🚀 Production Deployment Successful\", level=\"rocket\", extra=details)\n",
-    "\n",
-    "\n",
-    "    def blocked(self, reason: str):\n",
-    "        self.send(\"🚫 Production Promotion Blocked\", level=\"warning\", extra={\"Reason\": reason})\n",
-    "\n",
-    "\n",
-    "slack = SlackNotifier(config.SLACK_WEBHOOK_URL)\n",
-    "\n",
-    "\n",
-    "\n",
-    "# ================== MLFLOW INIT ==================\n",
+    "# MLFLOW INIT\n",
     "\n",
     "print(\"\\n🔧 Initializing MLflow...\")\n",
     "\n",
@@ -180,11 +135,10 @@
     "    print(\"✅ MLflow Running\")\n",
     "except Exception as e:\n",
     "    print(f\"❌ Pipeline Init Failed: {e}\")\n",
+    "    send_slack_notification(f\"❌ Init Failed: {e}\", \"error\")\n",
     "    sys.exit(1)\n",
     "\n",
-    "\n",
-    "\n",
-    "# ================== HELPER FUNCTIONS ==================\n",
+    "# HELPER FUNCTIONS\n",
     "\n",
     "def get_metric(run_id):\n",
     "    try:\n",
@@ -193,8 +147,7 @@
     "        return None\n",
     "\n",
     "\n",
-    "\n",
-    "# ================== STAGING MODEL ==================\n",
+    "# GET STAGING MODEL\n",
     "\n",
     "def get_staging():\n",
     "    print(\"\\n📍 Fetching staging model...\")\n",
@@ -204,9 +157,7 @@
     "    except:\n",
     "        return None\n",
     "\n",
-    "\n",
-    "\n",
-    "# ================== UAT VALIDATION ==================\n",
+    "# CHECK UAT\n",
     "\n",
     "def check_uat(version):\n",
     "    print(\"\\n📍 Validating UAT results...\")\n",
@@ -226,9 +177,9 @@
     "    }\n",
     "\n",
     "\n",
-    "\n",
-    "# ================== PROMOTE ==================\n",
-    "\n",
+    "# =============================================\n",
+    "# PROMOTE TO PROD\n",
+    "# =============================================\n",
     "def promote(model, uat):\n",
     "    v = model[\"version\"]\n",
     "\n",
@@ -236,24 +187,28 @@
     "\n",
     "    client.set_registered_model_alias(config.MODEL_NAME, config.PRODUCTION_ALIAS, v)\n",
     "\n",
+    "    send_slack_notification(\n",
+    "        f\"🎉 Production Deployment SUCCESS\\nModel: `{config.MODEL_NAME}`\\nVersion: v{v}\",\n",
+    "        \"success\"\n",
+    "    )\n",
+    "\n",
     "    print(\"\\n🎉 MODEL LIVE IN PRODUCTION!\")\n",
-    "    slack.success(config.MODEL_NAME, v, uat)\n",
     "\n",
     "\n",
-    "\n",
-    "# ================== MAIN ==================\n",
-    "\n",
+    "# =============================================\n",
+    "# MAIN\n",
+    "# =============================================\n",
     "def main():\n",
-    "    slack.send(\"🔥 Promotion Pipeline Started\")\n",
+    "    send_slack_notification(\"🔥 Promotion Pipeline Started\")\n",
     "\n",
     "    model = get_staging()\n",
     "    if not model:\n",
-    "        slack.blocked(\"No staging model found.\")\n",
+    "        send_slack_notification(\"❌ No staging model found\", \"error\")\n",
     "        sys.exit(1)\n",
     "\n",
     "    ok, uat = check_uat(model[\"version\"])\n",
     "    if not ok:\n",
-    "        slack.blocked(\"UAT Failed. Cannot promote.\")\n",
+    "        send_slack_notification(\"⚠️ UAT FAILED — Promotion Blocked\", \"warning\")\n",
     "        sys.exit(1)\n",
     "\n",
     "    promote(model, uat)\n",
