--- a/prod_env/prod_inference.ipynb
+++ b/prod_env/prod_inference.ipynb
@@ -15,6 +15,7 @@
     "import numpy as np\n",
     "import yaml\n",
     "import traceback\n",
+    "import sys  # ← ADDED\n",
     "from datetime import datetime\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
     "\n",
@@ -29,12 +30,11 @@
     "import os\n",
     "\n",
     "try:\n",
-    "    try:\n",
-    "        base_dir = os.path.dirname(os.path.abspath(__file__))\n",
-    "    except NameError:\n",
-    "        base_dir = os.getcwd()\n",
-    "\n",
-    "    config_path = os.path.join(base_dir, \"pipeline_config.yml\")\n",
+    "    # ← FIXED: Direct path instead of __file__\n",
+    "    config_path = \"/Workspace/Repos/vipultak7171@gmail.com/ml-credit-risk/dev_env/pipeline_config.yml\"\n",
+    "    \n",
+    "    if not os.path.exists(config_path):\n",
+    "        config_path = \"pipeline_config.yml\"  # Fallback\n",
     "\n",
     "    with open(config_path, \"r\") as f:\n",
     "        pipeline_cfg = yaml.safe_load(f)\n",
@@ -60,7 +60,7 @@
     "except Exception as e:\n",
     "    print(f\"❌ Failed to load config: {e}\")\n",
     "    traceback.print_exc()\n",
-    "    dbutils.notebook.exit(\"FAIL_CONFIG_LOAD\")\n",
+    "    sys.exit(1)  # ← FIXED: Changed from dbutils.notebook.exit()\n",
     " \n",
     "# 2️⃣ Initialize clients\n",
     "\n",
@@ -72,7 +72,7 @@
     "except Exception as e:\n",
     "    print(f\"❌ Initialization failed: {e}\")\n",
     "    traceback.print_exc()\n",
-    "    dbutils.notebook.exit(\"FAIL_INIT\")\n",
+    "    sys.exit(1)  # ← FIXED: Changed from dbutils.notebook.exit()\n",
     " \n",
     "# 3️⃣ Load input data\n",
     " \n",
@@ -94,7 +94,7 @@
     "except Exception as e:\n",
     "    print(f\"❌ Data load error: {e}\")\n",
     "    traceback.print_exc()\n",
-    "    dbutils.notebook.exit(\"FAIL_DATA_LOAD\")\n",
+    "    sys.exit(1)  # ← FIXED: Changed from dbutils.notebook.exit()\n",
     " \n",
     "# 4️⃣ Run inference using Serving Endpoint\n",
     "\n",
@@ -103,20 +103,30 @@
     "predictions = []\n",
     "n_batches = (len(df) // BATCH_SIZE) + 1\n",
     "\n",
-    "for i in range(n_batches):\n",
-    "    batch = df.iloc[i * BATCH_SIZE : (i+1) * BATCH_SIZE]\n",
+    "try:\n",
+    "    for i in range(n_batches):\n",
+    "        batch = df.iloc[i * BATCH_SIZE : (i+1) * BATCH_SIZE]\n",
     "\n",
-    "    if batch.empty:\n",
-    "        continue\n",
+    "        if batch.empty:\n",
+    "            continue\n",
     "\n",
-    "    response = ws.serving_endpoints.query(\n",
-    "        name=ENDPOINT_NAME,\n",
-    "        dataframe_records=batch[FEATURES].to_dict(\"records\")\n",
-    "    )\n",
+    "        response = ws.serving_endpoints.query(\n",
+    "            name=ENDPOINT_NAME,\n",
+    "            dataframe_records=batch[FEATURES].to_dict(\"records\")\n",
+    "        )\n",
     "\n",
-    "    predictions.extend(response.predictions)\n",
+    "        predictions.extend(response.predictions)\n",
+    "        \n",
+    "        # Show progress\n",
+    "        if (i + 1) % 10 == 0 or (i + 1) == n_batches:\n",
+    "            print(f\"   Processed batch {i+1}/{n_batches}\")\n",
     "\n",
-    "print(f\"✅ Inference complete: {len(predictions)} predictions generated\")\n",
+    "    print(f\"✅ Inference complete: {len(predictions)} predictions generated\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Inference failed: {e}\")\n",
+    "    traceback.print_exc()\n",
+    "    sys.exit(1)\n",
     " \n",
     "# 5️⃣ Build output dataframe\n",
     " \n",
@@ -165,7 +175,8 @@
     "\n",
     "    print(\"📊 Metrics:\")\n",
     "    for k, v in metrics.items():\n",
-    "        print(f\"   ➤ {k}: {round(v,4)}\")\n",
+    "        if v is not None:\n",
+    "            print(f\"   ➤ {k}: {round(v,4)}\")\n",
     "\n",
     "else:\n",
     "    print(\"\\nℹ️ No true labels found → skipping metrics.\")\n",
@@ -181,7 +192,8 @@
     "print(f\"📌 Endpoint       : {ENDPOINT_NAME}\")\n",
     "print(\"=\"*80)\n",
     "\n",
-    "dbutils.notebook.exit(\"SUCCESS\")\n"
+    "# ← FIXED: sys.exit(0) instead of dbutils.notebook.exit(\"SUCCESS\")\n",
+    "print(\"✅ Script completed successfully\")"
    ]
   }
  ],
