--- a/prod_env/prod_promotion.ipynb
+++ b/prod_env/prod_promotion.ipynb
@@ -177,9 +177,8 @@
     "    }\n",
     "\n",
     "\n",
-    "# =============================================\n",
     "# PROMOTE TO PROD\n",
-    "# =============================================\n",
+    "\n",
     "def promote(model, uat):\n",
     "    v = model[\"version\"]\n",
     "\n",
@@ -188,7 +187,7 @@
     "    client.set_registered_model_alias(config.MODEL_NAME, config.PRODUCTION_ALIAS, v)\n",
     "\n",
     "    send_slack_notification(\n",
-    "        f\"🎉 Production Deployment SUCCESS\\nModel: `{config.MODEL_NAME}`\\nVersion: v{v}\",\n",
+    "        f\"🎉 Model promoted to production \\nModel: `{config.MODEL_NAME}`\\nVersion: v{v}\",\n",
     "        \"success\"\n",
     "    )\n",
     "\n",
